--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
 			<div class="cards">
 			<div class="card" align="center">
-			<img src="images/foil.jpg" alt="foil">
+			<img src="allimages/foil.jpg" alt="foil">
 			<h3>Kite Foil</h3>
 			
 		</div>		
 	
 		<div class="card" align="center">
-			<img src="images/windsurf.jpg" alt="foil">
+			<img src="allimages/windsurf.jpg" alt="foil">
 			<h3>Windsurf</h3>
 			
 		</div>		
 	
 		<div class="card" align="center">
-			<img src="images/cata.jpg" alt="foil">
+			<img src="allimages/cata.jpg" alt="foil">
 			<h3>Catamaran</h3>
 			
 		</div>	
